# seshat

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.slim  LICENSE  NOTICE  README.md  SECURITY.md  TIER1_TEST_PLAN.md  docker-compose.example.yml  pyproject.toml  requirements-dev.txt  requirements.txt  unraid-template.xml
.github/workflows/: docker-publish.yml
app/: __init__.py  auth_db.py  auth_passwords.py  auth_secret.py  auth_sessions.py  config.py  database.py  main.py  runtime.py  secrets.py  state.py
app/clients/: __init__.py  base.py  deluge.py  qbittorrent.py  rtorrent.py  transmission.py
app/discovery/: __init__.py  acquisition_linkback.py  amazon_author_id_resolver.py  audiobookshelf_sync.py  book_merge.py  calibre_sync.py  cover_phash.py  cross_library.py  database.py  digest.py  goodreads_author_backfill.py  hygiene.py  log_buffer.py  lookup.py  notify.py  push_back.py  scheduled_jobs.py  scoring.py  source_urls.py  sync_state.py
app/filter/: __init__.py  gate.py  normalize.py
app/mam/: __init__.py  (+13 more)
docs/: metadata-sources.md  v23_metadata_design.md  works_and_tracking_mode.md
files/: seshat-v2.12.1-uat-findings.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: probe_amazon_juvec.py  probe_goodreads.py  probe_hardcover_audiobook_filter.py  validate_sources.py
tests/: conftest.py  fake_irc.py  fake_mam.py  fake_qbit.py  test_config.py  test_legacy_db_upgrade.py  test_lifespan_smoke.py  test_live_integration.py
tools/: migrate_from_legacy.py  test_pipeline.py
(+352 files in other folders)
